2007-05-09  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h, usb.c: Send/Receive control messages to class.
	* library.c: Added Kodak C653

2007-05-06  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon IXUS 75 aka PowerShot SD750.
	* library.c: Added Fuji FinePix S9500.
	* library.c: Added Motorola A1200 smart phone in MTP.

2007-04-16  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h, library.c: Added some Canon EOS specific properties
	  and values.

	* library.c: Added PowerShot SD1000 aka IXUS 70.
	* library.c: Added Kodak Easyshare C743

2007-04-11  Marcus Meissner  <marcus@jet.franken.de>

	* Added Archos 504 MTP player.

2007-04-04  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot A550
	* ptpip.c: Added major/minor version reporting.

2007-03-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Check for overflows in --summary.
	* library.c: Skip the 0xd201 property, it causes hangs.

2007-03-24  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added configuration of shooting mode.

2007-03-23  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: Added MTP command 0x9806 (from libmtp).

2007-03-12  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon MV750i.

2007-03-07  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Avoid emitting the d029 property if the camera does
	  not have it.

2007-03-05  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Fuji FinePix F20.
	* usb.c: Adjusted PTP error reporting not to spew on the 
	  gp_context_error channel. 

2007-03-03  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Disable Canon fast directory retrieval,
	  since it reportedly fails with the Canon PowerShot A430.

2007-02-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: If we have a Canon USB device, but with
	  Microsoft vendor extid, switch the exitid back to Canon.

2007-02-26  Marcus Meissner  <marcus@jet.franken.de>
