@@ -1,3 +1,7 @@
+2007-05-23  Marcus Meissner  <marcus@jet.franken.de>
+
+	* config.c: Allow configuration of Exposure Bias Compensation
+
 2007-05-09  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.h, usb.c: Send/Receive control messages to class.
